// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateContactForm should render channel 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <temba-select
              data-testid="temba_select_type"
              searchable="true"
            >
              <temba-option
                name="Send the contact a message"
                value="send_msg"
              />
              <temba-option
                name="Wait for the contact to respond"
                value="wait_for_response"
              />
              <temba-option
                name="Send somebody else a message"
                value="send_broadcast"
              />
              <temba-option
                name="Label the incoming message"
                value="add_input_labels"
              />
              <temba-option
                name="Add a URN for the contact"
                value="add_contact_urn"
              />
              <temba-option
                name="Add the contact to a group"
                value="add_contact_groups"
              />
              <temba-option
                name="Remove the contact from a group"
                value="remove_contact_groups"
              />
              <temba-option
                name="Update the contact"
                selected="true"
                value="set_contact_field"
              />
              <temba-option
                name="Send an email"
                value="send_email"
              />
              <temba-option
                name="Save a result for this flow"
                value="set_run_result"
              />
              <temba-option
                name="Call a webhook"
                value="call_webhook"
              />
              <temba-option
                name="Call Zapier"
                value="call_resthook"
              />
              <temba-option
                name="Enter another flow"
                value="enter_flow"
              />
              <temba-option
                name="Start somebody else in a flow"
                value="start_session"
              />
              <temba-option
                name="Send the contact airtime"
                value="transfer_airtime"
              />
              <temba-option
                name="Split by intent"
                value="split_by_intent"
              />
              <temba-option
                name="Split by a custom expression"
                value="split_by_expression"
              />
              <temba-option
                name="Split by a contact field"
                value="split_by_contact_field"
              />
              <temba-option
                name="Split by a result in the flow"
                value="split_by_run_result"
              />
              <temba-option
                name="Split by random chance"
                value="split_by_random"
              />
              <temba-option
                name="Split by group membership"
                value="split_by_groups"
              />
              <temba-option
                name="Split by URN type"
                value="split_by_scheme"
              />
            </temba-select>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="react-select selection css-2b097c-container"
          >
            <div
              class=" css-1h1mxjq-control"
            >
              <div
                class=" css-1hwfws3"
              >
                <div
                  class=" css-1sdgdfu-singleValue"
                >
                  Channel
                </div>
                <div
                  class="css-1al1kbh-Input"
                >
                  <div
                    class=""
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-3-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="react-select selection css-2b097c-container"
            >
              <div
                class=" css-1h1mxjq-control"
              >
                <div
                  class=" css-1hwfws3"
                >
                  <div
                    class=" css-1sdgdfu-singleValue"
                  >
                    Twilio Channel
                  </div>
                  <div
                    class="css-1al1kbh-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render field 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <temba-select
              data-testid="temba_select_type"
              searchable="true"
            >
              <temba-option
                name="Send the contact a message"
                value="send_msg"
              />
              <temba-option
                name="Wait for the contact to respond"
                value="wait_for_response"
              />
              <temba-option
                name="Send somebody else a message"
                value="send_broadcast"
              />
              <temba-option
                name="Label the incoming message"
                value="add_input_labels"
              />
              <temba-option
                name="Add a URN for the contact"
                value="add_contact_urn"
              />
              <temba-option
                name="Add the contact to a group"
                value="add_contact_groups"
              />
              <temba-option
                name="Remove the contact from a group"
                value="remove_contact_groups"
              />
              <temba-option
                name="Update the contact"
                selected="true"
                value="set_contact_field"
              />
              <temba-option
                name="Send an email"
                value="send_email"
              />
              <temba-option
                name="Save a result for this flow"
                value="set_run_result"
              />
              <temba-option
                name="Call a webhook"
                value="call_webhook"
              />
              <temba-option
                name="Call Zapier"
                value="call_resthook"
              />
              <temba-option
                name="Enter another flow"
                value="enter_flow"
              />
              <temba-option
                name="Start somebody else in a flow"
                value="start_session"
              />
              <temba-option
                name="Send the contact airtime"
                value="transfer_airtime"
              />
              <temba-option
                name="Split by intent"
                value="split_by_intent"
              />
              <temba-option
                name="Split by a custom expression"
                value="split_by_expression"
              />
              <temba-option
                name="Split by a contact field"
                value="split_by_contact_field"
              />
              <temba-option
                name="Split by a result in the flow"
                value="split_by_run_result"
              />
              <temba-option
                name="Split by random chance"
                value="split_by_random"
              />
              <temba-option
                name="Split by group membership"
                value="split_by_groups"
              />
              <temba-option
                name="Split by URN type"
                value="split_by_scheme"
              />
            </temba-select>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="react-select selection css-2b097c-container"
          >
            <div
              class=" css-1h1mxjq-control"
            >
              <div
                class=" css-1hwfws3"
              >
                <div
                  class=" css-1sdgdfu-singleValue"
                >
                  Age
                </div>
                <div
                  class="css-1al1kbh-Input"
                >
                  <div
                    class=""
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-2-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="Field Value"
                placeholder="Enter a new value for Age"
                type="text"
                value="25"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render language 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <temba-select
              data-testid="temba_select_type"
              searchable="true"
            >
              <temba-option
                name="Send the contact a message"
                value="send_msg"
              />
              <temba-option
                name="Wait for the contact to respond"
                value="wait_for_response"
              />
              <temba-option
                name="Send somebody else a message"
                value="send_broadcast"
              />
              <temba-option
                name="Label the incoming message"
                value="add_input_labels"
              />
              <temba-option
                name="Add a URN for the contact"
                value="add_contact_urn"
              />
              <temba-option
                name="Add the contact to a group"
                value="add_contact_groups"
              />
              <temba-option
                name="Remove the contact from a group"
                value="remove_contact_groups"
              />
              <temba-option
                name="Update the contact"
                selected="true"
                value="set_contact_field"
              />
              <temba-option
                name="Send an email"
                value="send_email"
              />
              <temba-option
                name="Save a result for this flow"
                value="set_run_result"
              />
              <temba-option
                name="Call a webhook"
                value="call_webhook"
              />
              <temba-option
                name="Call Zapier"
                value="call_resthook"
              />
              <temba-option
                name="Enter another flow"
                value="enter_flow"
              />
              <temba-option
                name="Start somebody else in a flow"
                value="start_session"
              />
              <temba-option
                name="Send the contact airtime"
                value="transfer_airtime"
              />
              <temba-option
                name="Split by intent"
                value="split_by_intent"
              />
              <temba-option
                name="Split by a custom expression"
                value="split_by_expression"
              />
              <temba-option
                name="Split by a contact field"
                value="split_by_contact_field"
              />
              <temba-option
                name="Split by a result in the flow"
                value="split_by_run_result"
              />
              <temba-option
                name="Split by random chance"
                value="split_by_random"
              />
              <temba-option
                name="Split by group membership"
                value="split_by_groups"
              />
              <temba-option
                name="Split by URN type"
                value="split_by_scheme"
              />
            </temba-select>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="react-select selection css-2b097c-container"
          >
            <div
              class=" css-1h1mxjq-control"
            >
              <div
                class=" css-1hwfws3"
              >
                <div
                  class=" css-1sdgdfu-singleValue"
                >
                  Language
                </div>
                <div
                  class="css-1al1kbh-Input"
                >
                  <div
                    class=""
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-6-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="react-select selection css-2b097c-container"
            >
              <div
                class=" css-1h1mxjq-control"
              >
                <div
                  class=" css-1hwfws3"
                >
                  <div
                    class=" css-1sdgdfu-singleValue"
                  >
                    eng
                  </div>
                  <div
                    class="css-1al1kbh-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-7-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render name 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <temba-select
              data-testid="temba_select_type"
              searchable="true"
            >
              <temba-option
                name="Send the contact a message"
                value="send_msg"
              />
              <temba-option
                name="Wait for the contact to respond"
                value="wait_for_response"
              />
              <temba-option
                name="Send somebody else a message"
                value="send_broadcast"
              />
              <temba-option
                name="Label the incoming message"
                value="add_input_labels"
              />
              <temba-option
                name="Add a URN for the contact"
                value="add_contact_urn"
              />
              <temba-option
                name="Add the contact to a group"
                value="add_contact_groups"
              />
              <temba-option
                name="Remove the contact from a group"
                value="remove_contact_groups"
              />
              <temba-option
                name="Update the contact"
                selected="true"
                value="set_contact_field"
              />
              <temba-option
                name="Send an email"
                value="send_email"
              />
              <temba-option
                name="Save a result for this flow"
                value="set_run_result"
              />
              <temba-option
                name="Call a webhook"
                value="call_webhook"
              />
              <temba-option
                name="Call Zapier"
                value="call_resthook"
              />
              <temba-option
                name="Enter another flow"
                value="enter_flow"
              />
              <temba-option
                name="Start somebody else in a flow"
                value="start_session"
              />
              <temba-option
                name="Send the contact airtime"
                value="transfer_airtime"
              />
              <temba-option
                name="Split by intent"
                value="split_by_intent"
              />
              <temba-option
                name="Split by a custom expression"
                value="split_by_expression"
              />
              <temba-option
                name="Split by a contact field"
                value="split_by_contact_field"
              />
              <temba-option
                name="Split by a result in the flow"
                value="split_by_run_result"
              />
              <temba-option
                name="Split by random chance"
                value="split_by_random"
              />
              <temba-option
                name="Split by group membership"
                value="split_by_groups"
              />
              <temba-option
                name="Split by URN type"
                value="split_by_scheme"
              />
            </temba-select>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="react-select selection css-2b097c-container"
          >
            <div
              class=" css-1h1mxjq-control"
            >
              <div
                class=" css-1hwfws3"
              >
                <div
                  class=" css-1sdgdfu-singleValue"
                >
                  Name
                </div>
                <div
                  class="css-1al1kbh-Input"
                >
                  <div
                    class=""
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-5-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="Name"
                placeholder="Enter a new name for the contact"
                type="text"
                value="Jane Goodall"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
